# lynx

./: .gitignore  Cargo.toml  README.md
docs/: design.md
src/: buffer.rs  event.rs  lib.rs  lynx.rs  main.rs  persist.rs  query.rs  retention.rs  server.rs  wal.rs
src/wal/: mod.rs
testdata/: event.json  events.json  query.json  write.json
tests/: e2e.rs  helpers.rs  lynx.rs  query.rs
