[package]
name = "lynx"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.3.0"
arrow-json = "53.3.0"
axum = { version = "0.7.9", features = ["macros"] }
byteorder = "1.5.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive", "env"] }
datafusion = "43.0.0"
object_store = { version = "0.11.2", features = ["aws"] }
parquet = "53.3.0"
reqwest = "0.12.12"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
rand = "0.8.5"
tempfile = "3.15.0"
