[package]
name = "lynx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
datafusion = "50.3.0"

[dev-dependencies]
tempfile = "3.23.0"
